--- a/index.html
+++ b/index.html
@@ -50,17 +50,213 @@
 
 				<div class="studio">
 					<div class="studio1">
-						<p>Creative and post for film and video.</p>
+						<p>Creative services for film and video.</p>
 					</div>
 					<div class="studio2">
-						<p>Based in NYC. hi@placement.studio </p>
+						<p>Based in NYC. hi@placement.studio</p>
 					</div>
 				</div>
 			</div>
 			<iframe src="https://player.vimeo.com/video/464353782?background=1"  frameborder="0" width="100%" height="400px"></iframe>
 			<!--	<div id="reel">
-				<iframe src="https://player.vimeo.com/video/464353782?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" width="100%" height="400px"></iframe>
+				<iframe src="https://player.vimeo.com/video/464353782?background=1"  frameborder="0" width="100%" height="400px"></iframe>
 			</div >-->
+
+		</div>
+	<div class="sections" id="what">
+		<div class="layer poster">
+			<p class="bigtxt"> We create films and videos. From ideation, to execution, to delivery — and everything in between. </p>
+		</div>
+	</div>
+
+	<div class="sections" id="offer">
+		<div class="layer">
+
+			<div class="slider">
+				<ul>
+			    <li>
+						<p class="medtxt topleft"> We offer a full range of creative services, including direction, cinematography, editing, animation, and color:</p>
+							<div class="movie">
+								<iframe src="https://player.vimeo.com/video/488689223?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+							</div>
+						<p> Glossier Skywash — Direction, Cinematography, Post </p>
+					</li>
+
+					<li class="top-align">
+						<div>	<img src="assets/img/s3/s2_everlane.png"> </div>
+						<p class="slidedescript"> Everlane, Various Projects — Direction, Cinematography, Post</p>
+					</li>
+
+					<li class="bottom-align">
+							<div class="movie">
+								<iframe src="https://player.vimeo.com/video/488689507?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+							</div>
+						<p class="slidedescript"> Billie — Direction, Cinematography</p>
+					</li>
+
+					<li class="top-align">
+							<div>	<img src="assets/img/s3/s2_theory.png"> </div>
+						<p class="slidedescript"> Theory — Direction, Cinematography, Post </p>
+					</li>
+
+					<li class="bottom-align">
+							<div class="movie">
+								<iframe class="sixteen-nine" src="https://player.vimeo.com/video/488689649?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+							</div>
+						<p class="slidedescript"> W Mag: Anna Sui — Post </p>
+					</li>
+
+					</ul>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="sections" id="collaborate">
+			<div class="layer poster">
+				<p class="bigtxt"> We collaborate with in-house creative and agencies to help realize projects from pre-production to delivery.</p>
+			</div>
+		</div>
+
+		<div class="sections" id="specialize">
+			<div class="layer">
+				<div class="slider">
+				<ul>
+				 <li class="bottom-align">
+					 	<p class="medtxt topleft"> We specialize in a wide range of mediums and content:</p>
+							<div class="movie">
+								<iframe src="https://player.vimeo.com/video/341696998?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+							</div>
+						<p> Campaign films</p>
+
+					</li>
+					<li class="top-align">
+											<div>	<img src="assets/img/s5/s5_basel.png"> </div>
+						<!--		<iframe src="https://player.vimeo.com/video/488689676?background=1"  frameborder="0" width="100%" height="200px"></iframe> -->
+						<p class="slidedescript"> Short-Form Documentary</p>
+					</li>
+
+					<li class="bottom-align">
+						<div class="movie">
+							<iframe class="sixteen-nine" src="https://player.vimeo.com/video/488689709?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+						</div>
+						<p class="slidedescript"> Product Launch Films </p>
+					</li>
+
+					<li class="top-align">
+								<div>	<img src="assets/img/s5/s5_uniqlo.png"> </div>
+			<!--		<iframe src="https://player.vimeo.com/video/488689733?background=1"  frameborder="0" width="100%" height="200px"></iframe> -->
+						<p class="slidedescript"> Social Campaigns  </p>
+					</li>
+
+					<li class="bottom-align">
+						<div class="movie">
+							<iframe class="sixteen-nine" src="https://player.vimeo.com/video/488689737?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+						</div>
+						<p class="slidedescript"> YouTube and Editorial Content </p>
+					</li>
+				</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="sections" id="clients">
+			<div class="layer">
+				<!-- <div class="topleft"> -->
+					<p class="medtxt topleft"> Some clients we’ve worked with:</p>
+							</div>
+				<div id="clientcover">
+					<div class="clientgrid">
+						<div class="clientlogo"><img src= "assets/img/logo/glossier.png"> </div>
+						<div class="clientlogo"><img src= "assets/img/logo/uniqlo.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/everlane.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/billie.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/theory.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/nyt.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/levis.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/vsco.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/w.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/warner.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/whitney.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/basel.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/amex.png"></div>
+						<div class="clientlogo"><img src= "assets/img/logo/standard.png"></div>
+					</div>
+				</div>
+
+				</div>
+
+
+
+		<div class="sections" id="about">
+			<div class="layer">
+				<div id="bio">
+			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a film and video studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. Get in touch and let's make something fun. ✌️  </p>
+			</div>
+				</div>
+		</div>
+
+		<div class="sections" id="archive">
+			<div class="layer">
+		<p class="medtxt topleft"> Selected Work</p>
+					</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/488689223" target="_blank" rel="noopener noreferrer"> 2020 // Glossier: Skywash  — Social campaign and product display page videos. <span><img src="assets/img/hover/2020_glossier_skywash.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/409080322" target="_blank" rel="noopener noreferrer"> 2020 // Everlane: 10 Questions in an Organic Tee — Video campaign <span><img src="assets/img/hover/e_gots.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/372225341" target="_blank" rel="noopener noreferrer"> 2019 // NYT: Rimowa  — (excerpt) video accompanying photoshoot, branded content <span><img src="assets/img/hover/nyt_r.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/397469359" target="_blank" rel="noopener noreferrer"> 2019 // Everlane: Caroline Ventura x Everlane denim — Social campaign <span><img src="assets/img/hover/e_cv.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/341428512" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Complexion <span><img src="assets/img/hover/g_com.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/325565290" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Colorslide <span><img src="assets/img/hover/g_cs.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/351062484" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Lip Gloss <span><img src="assets/img/hover/g_lg.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/389532896" target="_blank" rel="noopener noreferrer"> 2019 // Art Basel: Jill Kraus — Short form documentary <span><img src="assets/img/hover/ab_jk.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/397470272" target="_blank" rel="noopener noreferrer"> 2019 // Zit Sticka: Skin Discipline —  <span><img src="assets/img/hover/zs_sd.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/334559617" target="_blank" rel="noopener noreferrer"> 2019 // Uniqlo: Jason Polan x Marvel — Campaign film <span><img src="assets/img/hover/u_jp.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/299341712" target="_blank" rel="noopener noreferrer"> 2018 // Art Basel: Magazzino — Short form documentary <span><img src="assets/img/hover/ab_m.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/297827740" target="_blank" rel="noopener noreferrer"> 2018 // Theory: 2.0 — Campaign film <span><img src="assets/img/hover/t_tpo.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/297834914" target="_blank" rel="noopener noreferrer"> 2018 // Theory: Holiday 2018 — Campaign film <span class="bottomlinks"><img src="assets/img/hover/t_h.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/297834836" target="_blank" rel="noopener noreferrer"> 2018 // Glossier: Zit Stick <span class="bottomlinks"><img src="assets/img/hover/g_zs.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/249100765" target="_blank" rel="noopener noreferrer"> 2018 // Levis x Google: Jeff Staple — Campaign film <span class="bottomlinks"><img src="assets/img/hover/l_js.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/259055815" target="_blank" rel="noopener noreferrer"> 2018 // Warner Music: Level — Campaign film <span class="bottomlinks"><img src="assets/img/hover/wb_l.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/217500586" target="_blank" rel="noopener noreferrer"> 2017 // Theory: Transformer Bag —  <span class="bottomlinks"><img src="assets/img/hover/t_t.png" alt="image" height="300" /></span></a>
+			</div>
+			<div class="links">
+				<a href="https://player.vimeo.com/video/211300166" target="_blank" rel="noopener noreferrer"> 2017 // The Standard x Art News: Eric Mack — short form documentary <span class="bottomlinks"><img src="assets/img/hover/sh_em.png" alt="image" height="300" /></span></a>
+			</div>
+
+
+			</div>
 
 		</div>
 
