--- a/index.html
+++ b/index.html
@@ -201,58 +201,58 @@
 		<p class="medtxt topleft"> Selected Work</p>
 					</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/488689223" target="_blank" rel="noopener noreferrer"> 2020 // Glossier: Skywash  — Social campaign and product display page videos. <span><img src="assets/hover/2020_glossier_skywash.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/488689223" target="_blank" rel="noopener noreferrer"> 2020 // Glossier: Skywash  — Direction/DP/Post <span><img src="assets/hover/2020_glossier_skywash.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/409080322" target="_blank" rel="noopener noreferrer"> 2020 // Everlane: 10 Questions in an Organic Tee — Video campaign <span><img src="assets/hover/e_gots.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/409080322" target="_blank" rel="noopener noreferrer"> 2020 // Everlane: 10 Questions in an Organic Tee — Direction/DP/Post <span><img src="assets/hover/e_gots.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/372225341" target="_blank" rel="noopener noreferrer"> 2019 // NYT: Rimowa  — (excerpt) video accompanying photoshoot, branded content <span><img src="assets/hover/nyt_r.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/372225341" target="_blank" rel="noopener noreferrer"> 2019 // NYT: Rimowa  — DP (excerpt)  <span><img src="assets/hover/nyt_r.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/397469359" target="_blank" rel="noopener noreferrer"> 2019 // Everlane: Caroline Ventura x Everlane denim — Social campaign <span><img src="assets/hover/e_cv.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/397469359" target="_blank" rel="noopener noreferrer"> 2019 // Everlane: Caroline Ventura x Everlane denim — Direction/DP/Post <span><img src="assets/hover/e_cv.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/341428512" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Complexion <span><img src="assets/hover/g_com.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/341428512" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Complexion — Direction/DP <span><img src="assets/hover/g_com.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/325565290" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Colorslide <span><img src="assets/hover/g_cs.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/325565290" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Colorslide — Direction/DP/Post <span><img src="assets/hover/g_cs.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/351062484" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Lip Gloss <span><img src="assets/hover/g_lg.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/351062484" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Lip Gloss — Direction/DP/Post <span><img src="assets/hover/g_lg.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/389532896" target="_blank" rel="noopener noreferrer"> 2019 // Art Basel: Jill Kraus — Short form documentary <span><img src="assets/hover/ab_jk.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/389532896" target="_blank" rel="noopener noreferrer"> 2019 // Art Basel: Jill Kraus — Direction/DP/Post <span><img src="assets/hover/ab_jk.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/397470272" target="_blank" rel="noopener noreferrer"> 2019 // Zit Sticka: Skin Discipline —  <span><img src="assets/hover/zs_sd.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/397470272" target="_blank" rel="noopener noreferrer"> 2019 // Zit Sticka: Skin Discipline —  Direction/DP (Live action)  <span><img src="assets/hover/zs_sd.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/334559617" target="_blank" rel="noopener noreferrer"> 2019 // Uniqlo: Jason Polan x Marvel — Campaign film <span><img src="assets/hover/u_jp.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/334559617" target="_blank" rel="noopener noreferrer"> 2019 // Uniqlo: Jason Polan x Marvel — Direction/DP/Post <span><img src="assets/hover/u_jp.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/299341712" target="_blank" rel="noopener noreferrer"> 2018 // Art Basel: Magazzino — Short form documentary <span><img src="assets/hover/ab_m.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/299341712" target="_blank" rel="noopener noreferrer"> 2018 // Art Basel: Magazzino — Direction/DP/Post <span><img src="assets/hover/ab_m.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297827740" target="_blank" rel="noopener noreferrer"> 2018 // Theory: 2.0 — Campaign film <span><img src="assets/hover/t_tpo.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297827740" target="_blank" rel="noopener noreferrer"> 2018 // Theory: 2.0 — Direction/DP/Post <span><img src="assets/hover/t_tpo.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297834914" target="_blank" rel="noopener noreferrer"> 2018 // Theory: Holiday 2018 — Campaign film <span class="bottomlinks"><img src="assets/hover/t_h.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297834914" target="_blank" rel="noopener noreferrer"> 2018 // Theory: Holiday 2018 — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/t_h.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297834836" target="_blank" rel="noopener noreferrer"> 2018 // Glossier: Zit Stick <span class="bottomlinks"><img src="assets/hover/g_zs.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297834836" target="_blank" rel="noopener noreferrer"> 2018 // Glossier: Zit Stick — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/g_zs.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/249100765" target="_blank" rel="noopener noreferrer"> 2018 // Levis x Google: Jeff Staple — Campaign film <span class="bottomlinks"><img src="assets/hover/l_js.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/249100765" target="_blank" rel="noopener noreferrer"> 2018 // Levis x Google: Jeff Staple — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/l_js.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/259055815" target="_blank" rel="noopener noreferrer"> 2018 // Warner Music: Level — Campaign film <span class="bottomlinks"><img src="assets/hover/wb_l.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/259055815" target="_blank" rel="noopener noreferrer"> 2018 // Warner Music: Level — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/wb_l.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/217500586" target="_blank" rel="noopener noreferrer"> 2017 // Theory: Transformer Bag —  <span class="bottomlinks"><img src="assets/hover/t_t.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/217500586" target="_blank" rel="noopener noreferrer"> 2017 // Theory: Transformer Bag — Direction/DP/Post  <span class="bottomlinks"><img src="assets/hover/t_t.png" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/211300166" target="_blank" rel="noopener noreferrer"> 2017 // The Standard x Art News: Eric Mack — short form documentary <span class="bottomlinks"><img src="assets/hover/sh_em.png" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/211300166" target="_blank" rel="noopener noreferrer"> 2017 // The Standard x Art News: Eric Mack — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/sh_em.png" alt="image" height="300" /></span></a>
 			</div>
 
 
