--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<p>Creative and post services for film & video.</p>
 					</div>
 					<div class="studio2">
-						<p>Based in NYC. hi@placement.studio</p>
+						<p>hi@placement.studio Based in NYC. </p>
 					</div>
 				</div>
 			</div>
