--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					</li>
 
 					<li class="top-align">
-						<div>	<img src="assets/img/s3/s2_everlane.png"> </div>
+						<div>	<img src="assets/img/s3/s2_everlane.jpg"> </div>
 						<p class="slidedescript"> Everlane, Various Projects — Direction, Cinematography, Post</p>
 					</li>
 
@@ -95,7 +95,7 @@
 					</li>
 
 					<li class="top-align">
-							<div>	<img src="assets/img/s3/s2_theory.png"> </div>
+							<div>	<img src="assets/img/s3/s2_theory.jpg"> </div>
 						<p class="slidedescript"> Theory — Direction, Cinematography, Post </p>
 					</li>
 
@@ -138,7 +138,7 @@
 
 					</li>
 					<li class="top-align">
-											<div>	<img src="assets/img/s5/s5_basel.png"> </div>
+											<div>	<img src="assets/img/s5/s5_basel.jpg"> </div>
 						<!--		<iframe src="https://player.vimeo.com/video/488689676?background=1"  frameborder="0" width="100%" height="200px"></iframe> -->
 						<p class="slidedescript"> Short-Form Documentary</p>
 					</li>
@@ -151,7 +151,7 @@
 					</li>
 
 					<li class="top-align">
-								<div>	<img src="assets/img/s5/s5_uniqlo.png"> </div>
+								<div>	<img src="assets/img/s5/s5_uniqlo.jpg"> </div>
 			<!--		<iframe src="https://player.vimeo.com/video/488689733?background=1"  frameborder="0" width="100%" height="200px"></iframe> -->
 						<p class="slidedescript"> Social Campaigns  </p>
 					</li>
