--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
 					</div>
 				</div>
 			</div>
-			<iframe src="https://player.vimeo.com/video/464353782?background=1"  frameborder="0" width="100%" height="400px"></iframe>
+			<div class="covermovie">
+				<div class="covermovie_inner">
+					<iframe src="https://player.vimeo.com/video/464353782?background=1"  frameborder="0"></iframe>
+				</div>
+			</div>
 			<!--	<div id="reel">
 				<iframe src="https://player.vimeo.com/video/464353782?background=1"  frameborder="0" width="100%" height="400px"></iframe>
 			</div >-->
@@ -198,7 +202,7 @@
 		<div class="sections" id="about">
 			<div class="layer">
 				<div id="bio">
-			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a film and video studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. We are currently booking post-production, color, and motion graphics projects. Get in touch and let's make something fun. ✌️  </p>
+			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a film and video studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. We are currently booking post-production, color, and motion graphics projects. Get in touch and let’s make something fun. ✌️  </p>
 			</div>
 				</div>
 		</div>
@@ -208,64 +212,64 @@
 		<p class="medtxt topleft"> Selected Work</p>
 					</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/488689223" target="_blank" rel="noopener noreferrer"> 2020 // Glossier: Skywash  — Direction/DP/Post <span><img src="assets/hover/2020_glossier_skywash.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/488689223" target="_blank" rel="noopener noreferrer"> <div class="links-year">2020</div>Glossier: Skywash  — Direction/DP/Post <span><img src="assets/hover/2020_glossier_skywash.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/409080322" target="_blank" rel="noopener noreferrer"> 2020 // Everlane: 10 Questions in an Organic Tee — Direction/DP/Post <span><img src="assets/hover/e_gots.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/409080322" target="_blank" rel="noopener noreferrer"> <div class="links-year">2020</div>Everlane: 10 Questions in an Organic Tee — Direction/DP/Post <span><img src="assets/hover/e_gots.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/500900827" target="_blank" rel="noopener noreferrer"> 2020 // VSCO: Q4 Social Campaign — Animation/Post <span><img src="assets/hover/vsco.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/500900827" target="_blank" rel="noopener noreferrer"> <div class="links-year">2020</div>VSCO: Q4 Social Campaign — Animation/Post <span><img src="assets/hover/vsco.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/500898554" target="_blank" rel="noopener noreferrer"> 2020 // W Magazine: Anna Sui — Edit/Post <span><img src="assets/hover/wmag_a.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/500898554" target="_blank" rel="noopener noreferrer"> <div class="links-year">2020</div>W Magazine: Anna Sui — Edit/Post <span><img src="assets/hover/wmag_a.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/372225341" target="_blank" rel="noopener noreferrer"> 2019 // NYT: Rimowa  — DP (excerpt)  <span><img src="assets/hover/nyt_r.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/372225341" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>NYT: Rimowa  — DP (excerpt)  <span><img src="assets/hover/nyt_r.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/397469359" target="_blank" rel="noopener noreferrer"> 2019 // Everlane: Caroline Ventura x Everlane denim — Direction/DP/Post <span><img src="assets/hover/e_cv.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/397469359" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Everlane: Caroline Ventura x Everlane denim — Direction/DP/Post <span><img src="assets/hover/e_cv.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/341428512" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Complexion — Direction/DP <span><img src="assets/hover/g_com.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/341428512" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Complexion — Direction/DP <span><img src="assets/hover/g_com.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/325565290" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Colorslide — Direction/DP/Post <span><img src="assets/hover/g_cs.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/325565290" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Colorslide — Direction/DP/Post <span><img src="assets/hover/g_cs.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/351062484" target="_blank" rel="noopener noreferrer"> 2019 // Glossier: Lip Gloss — Direction/DP/Post <span><img src="assets/hover/g_lg.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/351062484" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Lip Gloss — Direction/DP/Post <span><img src="assets/hover/g_lg.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/389532896" target="_blank" rel="noopener noreferrer"> 2019 // Art Basel: Jill Kraus — Direction/DP/Post <span><img src="assets/hover/ab_jk.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/389532896" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Art Basel: Jill Kraus — Direction/DP/Post <span><img src="assets/hover/ab_jk.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/397470272" target="_blank" rel="noopener noreferrer"> 2019 // Zit Sticka: Skin Discipline —  Direction/DP (Live action)  <span><img src="assets/hover/zs_sd.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/397470272" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Zit Sticka: Skin Discipline —  Direction/DP (Live action)  <span><img src="assets/hover/zs_sd.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/334559617" target="_blank" rel="noopener noreferrer"> 2019 // Uniqlo: Jason Polan x Marvel — Direction/DP/Post <span><img src="assets/hover/u_jp.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/334559617" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Uniqlo: Jason Polan x Marvel — Direction/DP/Post <span><img src="assets/hover/u_jp.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/299341712" target="_blank" rel="noopener noreferrer"> 2018 // Art Basel: Magazzino — Direction/DP/Post <span><img src="assets/hover/ab_m.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/299341712" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Art Basel: Magazzino — Direction/DP/Post <span><img src="assets/hover/ab_m.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297827740" target="_blank" rel="noopener noreferrer"> 2018 // Theory: 2.0 — Direction/DP/Post <span><img src="assets/hover/t_tpo.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297827740" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Theory: 2.0 — Direction/DP/Post <span><img src="assets/hover/t_tpo.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297834914" target="_blank" rel="noopener noreferrer"> 2018 // Theory: Holiday 2018 — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/t_h.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297834914" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Theory: Holiday 2018 — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/t_h.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297834836" target="_blank" rel="noopener noreferrer"> 2018 // Glossier: Zit Stick — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/g_zs.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297834836" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Glossier: Zit Stick — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/g_zs.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/249100765" target="_blank" rel="noopener noreferrer"> 2018 // Levis x Google: Jeff Staple — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/l_js.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/249100765" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Levis x Google: Jeff Staple — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/l_js.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/259055815" target="_blank" rel="noopener noreferrer"> 2018 // Warner Music: Level — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/wb_l.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/259055815" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Warner Music: Level — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/wb_l.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/217500586" target="_blank" rel="noopener noreferrer"> 2017 // Theory: Transformer Bag — Direction/DP/Post  <span class="bottomlinks"><img src="assets/hover/t_t.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/217500586" target="_blank" rel="noopener noreferrer"> <div class="links-year">2017</div>Theory: Transformer Bag — Direction/DP/Post  <span class="bottomlinks"><img src="assets/hover/t_t.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/211300166" target="_blank" rel="noopener noreferrer"> 2017 // The Standard x Art News: Eric Mack — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/sh_em.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/211300166" target="_blank" rel="noopener noreferrer"> <div class="links-year">2017</div>The Standard x Art News: Eric Mack — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/sh_em.jpg" alt="image" height="300" /></span></a>
 			</div>
 
 
