--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<div class="studio">
 					<div class="studio1">
-						<p>Creative and post services for film & video.</p>
+						<p>Post-production services for film & video.</p>
 					</div>
 					<div class="studio2">
 						<p>hi@placement.studio Based in NYC. </p>
@@ -69,7 +69,7 @@
 		</div>
 	<div class="sections" id="what">
 		<div class="layer poster">
-			<p class="bigtxt"> We create films and videos. From ideation, to execution, to delivery — and everything in between. </p>
+			<p class="bigtxt"> From concept to final, we help create film and video projects — specializing in a range of post services </p>
 		</div>
 	</div>
 
@@ -79,7 +79,7 @@
 			<div class="slider">
 				<ul>
 			    <li>
-						<p class="medtxt topleft"> We offer a full range of creative services, including direction, cinematography, editing, animation, and color:</p>
+						<p class="medtxt topleft"> Creative, Edit, Color Correct, Retouch, Animation, Compositing, Effects</p>
 							<div class="movie">
 								<iframe src="https://player.vimeo.com/video/488689223?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
@@ -125,7 +125,7 @@
 
 		<div class="sections" id="collaborate">
 			<div class="layer poster">
-				<p class="bigtxt"> We collaborate with in-house creative and agencies to help realize projects from pre-production to delivery.</p>
+				<p class="bigtxt"> We collaborate with brands, in-house creative, agencies, and production companies to help realize projects from pre-production to delivery.</p>
 			</div>
 		</div>
 
@@ -134,7 +134,7 @@
 				<div class="slider">
 				<ul>
 				 <li class="bottom-align">
-					 	<p class="medtxt topleft"> We specialize in a range of mediums and content:</p>
+					 	<p class="medtxt topleft"> Short form documentary, digital ads, social campaigns, editorial, and motion graphics </p>
 							<div class="movie">
 								<iframe src="https://player.vimeo.com/video/341696998?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
@@ -151,7 +151,7 @@
 						<div class="movie">
 							<iframe class="sixteen-nine" src="https://player.vimeo.com/video/488689709?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 						</div>
-						<p class="slidedescript"> Product Launch Films </p>
+						<p class="slidedescript"> Product Films </p>
 					</li>
 
 					<li class="top-align">
@@ -164,7 +164,7 @@
 						<div class="movie">
 							<iframe class="sixteen-nine" src="https://player.vimeo.com/video/488689737?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 						</div>
-						<p class="slidedescript"> YouTube and Editorial Content </p>
+						<p class="slidedescript"> Editorial Content </p>
 					</li>
 				</ul>
 				</div>
@@ -202,7 +202,7 @@
 		<div class="sections" id="about">
 			<div class="layer">
 				<div id="bio">
-			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a film and video studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. We are currently booking post-production, color, and motion graphics projects. Get in touch and let’s make something fun. ✌️  </p>
+			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a post-production studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. We are currently booking edit, color, and motion graphics projects. Get in touch and let’s make something fun. ✌️  </p>
 			</div>
 				</div>
 		</div>
