--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<div class="studio">
 					<div class="studio1">
-						<p>Creative and Post-production services for film & video.</p>
+						<p>Creative and Post services for film & video.</p>
 					</div>
 					<div class="studio2">
 						<p>hi@placement.studio Based in NYC. </p>
